--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,20 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Brain games"
 authors = ["Aleksandr Zhuravlev <Alexandrzhuravlyov828@yandex.ru>"]
 readme = "README.md"
+repository = "https://github.com/AleksandrZhuravlevv/python-project-49"
 packages = [
 	{ include = "brain_games" },
 ]
+
+
+classifiers = [
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
